--- a/crud-spring/crud-spring/src/main/resources/application.properties
+++ b/crud-spring/crud-spring/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql=true
 
 #bd
 #http://localhost:8080/h2-console/
+
+#error msg server
+server.error.include-stacktrace=never
+server.error.include-message=never
